# archipelago

./: .gitignore  .gitmodules
agents/: .env.example  README.md  pyproject.toml
agents/runner/: main.py
agents/runner/save/: webhook.py
agents/runner/utils/: llm.py  settings.py
environment/: .env.example  Dockerfile
environment/runner/gateway/: gateway.py
examples/hugging_face_task/: README.md  agent_config.json  compare_paired_runs.py  grading_settings.json  hsn_pipeline.py  main.py  orchestrator_config.json  run.sh
grading/: .env.example  README.md  pyproject.toml
grading/runner/utils/: llm.py  settings.py
grading/runner/utils/file_extraction/: factory.py
grading/runner/utils/file_extraction/methods/: __init__.py  markitdown_extractor.py
grading/runner/utils/file_extraction/utils/: chart_extraction.py
mcp_servers/filesystem/mcp_servers/filesystem_server/tools/: list_files.py  search_files.py
mcp_servers/filesystem/mcp_servers/filesystem_server/utils/: hsn.py
